<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="#e2dcdc"
    tools:context=".Main2Activity">

    <LinearLayout
        android:id="@+id/linearlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_layout"
        android:layout_marginBottom="@dimen/margin_layout"
        android:gravity="center"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="230dp"
            android:layout_marginBottom="@dimen/margin_layout"
            android:background="#FFFFFF">

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="match_parent"
                android:layout_height="160dp"
                android:layout_alignParentTop="true"
                android:contentDescription="@string/todo1"
                android:scaleType="centerCrop"
                android:src="@drawable/nad1" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentLeft="true"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="16dp"
                android:text="Spa Hair Saloon"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textStyle="italic" />

            <Button
                android:id="@+id/btn_view1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"
                android:layout_margin="10dp"
                android:background="@drawable/button_shapes"
                android:onClick="btnad1"
                android:text="View"
                android:textColor="#000000"
                android:textStyle="bold" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="230dp"
            android:layout_marginBottom="@dimen/margin_layout"
            android:background="#FFFFFF">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="match_parent"
                android:layout_height="160dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:contentDescription="@string/todo2"
                android:scaleType="centerCrop"
                android:src="@drawable/nad2" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentLeft="true"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="16dp"
                android:text="Naturals"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textStyle="italic" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"
                android:layout_margin="10dp"
                android:background="@drawable/button_shapes"
                android:onClick="btnad2"
                android:text="View"
                android:textColor="#000000"
                android:textStyle="bold" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="230dp"
            android:layout_marginBottom="@dimen/margin_layout"
            android:background="#FFFFFF">

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="match_parent"
                android:layout_height="160dp"
                android:layout_alignParentTop="true"
                android:contentDescription="@string/todo3"
                android:scaleType="centerCrop"
                android:src="@drawable/nad3" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentLeft="true"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="16dp"
                android:text="Manea The Saloon"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textStyle="italic" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"
                android:layout_margin="10dp"
                android:background="@drawable/button_shapes"
                android:onClick="btnad3"
                android:text="View"
                android:textColor="#000000"
                android:textStyle="bold" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="230dp"
            android:layout_marginBottom="@dimen/margin_layout"
            android:background="#FFFFFF">

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="match_parent"
                android:layout_height="160dp"
                android:layout_alignParentTop="true"
                android:contentDescription="@string/todo4"
                android:scaleType="centerCrop"
                android:src="@drawable/nad4" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentLeft="true"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="16dp"
                android:text="Green Trends"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textStyle="italic" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"
                android:layout_margin="10dp"
                android:background="@drawable/button_shapes"
                android:onClick="btnad4"
                android:text="View"
                android:textColor="#000000"
                android:textStyle="bold" />


        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="230dp"
            android:layout_marginBottom="@dimen/margin_layout"
            android:background="#FFFFFF">


            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="match_parent"
                android:layout_height="160dp"
                android:layout_alignParentTop="true"
                android:contentDescription="@string/todo5"
                android:scaleType="centerCrop"
                android:src="@drawable/nad5" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentLeft="true"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="16dp"
                android:text="Kapil's Saloon"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textStyle="italic" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"
                android:layout_margin="10dp"
                android:background="@drawable/button_shapes"
                android:onClick="btnad5"
                android:text="View"
                android:textColor="#000000"
                android:textStyle="bold" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="230dp"
            android:layout_marginBottom="@dimen/margin_layout"
            android:background="#FFFFFF">

            <ImageView
                android:id="@+id/imageView6"
                android:layout_width="match_parent"
                android:layout_height="160dp"
                android:layout_alignParentTop="true"
                android:contentDescription="@string/todo6"
                android:scaleType="centerCrop"
                android:src="@drawable/nad6" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentLeft="true"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="16dp"
                android:text="Bounce Saloon"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textStyle="italic" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"
                android:layout_margin="10dp"
                android:background="@drawable/button_shapes"
                android:onClick="btnad6"
                android:text="View"
                android:textColor="#000000"
                android:textStyle="bold" />

        </RelativeLayout>


    </LinearLayout>

</ScrollView>

